~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  Changelog for:
    v2.3.0 (WIP)

  * bug fix, + new feature, o other
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* GServer now defaults ns_ip (NPC-Server IP) to AUTO if it can't read it from the adminconfig.txt - This fixes NPC Server in RC.
+ Added protection for important files rather than preventing rw config/* now you can give people rights without worrying about them stealing your adminconfig.txt password.
  Note on protection: People with 'change staff accounts' can edit any file in config/* but cannot delete/move/rename them (to avoid messing up the server)
  Also, people with 'edit server options' or 'edit folder config' can directly edit the serveroptions.txt & foldersconfig.txt files respectively.
+ Now supports sendrpgmessage() packet from NPC-Server.
o Updated adminconfig.txt to have ns_ip=AUTO at the end.
o Updated YOURACCOUNT.TXT to have access to some folders the default was missing.
o The new protection added for protecting config/* also completely protects defaultaccount.txt from being modified.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  Changelog for:
    v2.2.0

  * bug fix, + new feature, o other
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* Some admin-only server options weren't in the list of protected options. They are now.
* Server now correctly deletes an empty string flag.
* A player's online seconds, kills, and deaths will now display correctly in their profile if their values exceed 1568735.
* Sign text is no longer trimmed.
* The server correctly handles UTF-8 file names in Windows now.
* Fixed a bug where moving a file in RC would fail to move the file and delete the original.
* Player gani parameters #P6 through #P9 should be correctly passed to other players now.
* String arrays in the profile field are correctly tokenized now.
* Fixed a bug with saving weapons where the SCRIPTEND field wasn't being written correctly in some instances.